# trade-network-streamlit

./: README.md  app.py  app_py_backup.py  nx-explore.ipynb  pyproject.toml  utils.py
nb/: README.md  graph.json  modelling_invoices_using_networkx.ipynb  network-credit-score.ipynb  nx-explore.ipynb
src/invoices/: invoice_simulator.py
