[project]
name = "streamlit-poc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.3.1",
    "faker>=37.4.0",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.3",
    "networkx>=3.5",
    "numpy>=2.3.0",
    "streamlit-d3graph>=1.0.3",
    "streamlit>=1.45.1",
    "scikit-learn>=1.7.0",
    "st-cytoscape>=0.0.5",
    "plotly>=6.1.2",
    "pandas>=2.3.0",
]
